Miscellaneous enhancements (#43)
* Some syntax fixes for readability. Remove unused code. etc

* Use consistent syntax for formatted strings