@@ -64,7 +64,7 @@ public class EventEntity implements LocaleDateFormattable {
     @Column(nullable = false)
     private LocalDate date;
 
-    @ManyToOne(fetch = FetchType.LAZY)
+    @ManyToOne(fetch = FetchType.LAZY, optional = false)
     private OrganizationEntity organizer;
 
     @ManyToOne(fetch = FetchType.LAZY)
@@ -89,7 +89,7 @@ public class EventEntity implements LocaleDateFormattable {
 
     @Override
     public String toString() {
-        return String.format("%s: %s", organizer.getName(), name);
+        return "%s: %s".formatted(organizer.getName(), name);
     }
 
     public void addTask(EventTaskEntity task) {
